// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformSystem is case-insensitive for system classification codes 1`] = `
[
  {
    "awardsAndCertificateDocuments": [
      {
        "allowedToDownload": true,
        "assetType": "AWARDS",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": false,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": undefined,
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 1.7976931348623157e+308,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": undefined,
      },
    ],
    "awardsAndCertificateImages": [
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
    ],
    "bim": {
      "name": "name",
      "url": "http://localhost:8000",
    },
    "brand": {
      "code": "code",
      "logo": "http://localhost:8000",
      "name": "name",
    },
    "categories": [
      {
        "categoryType": "Brand",
        "code": "code",
        "image": {
          "allowedToDownload": true,
          "fileSize": 10,
          "mime": "image/png",
          "name": "name",
          "realFileName": "real-file-name.png",
          "url": "http://localhost:8000",
        },
        "name": "name",
        "parentCategoryCode": "parent-category-code",
      },
    ],
    "classifications": [],
    "code": "code",
    "description": "<p>Some very long description</p>",
    "documents": [
      {
        "assetType": "ASSEMBLY_INSTRUCTIONS",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "SPECIFICATION",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "VIDEO",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "84587715",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
    "galleryImages": [
      {
        "altText": "name",
        "mainSource": "http://localhost:8000",
        "thumbnail": "http://localhost:8000",
      },
    ],
    "goodBetterBest": undefined,
    "guaranteesAndWarrantiesImages": [],
    "guaranteesAndWarrantiesLinks": [],
    "hashedCode": "1853176582",
    "keyFeatures": {
      "name": "System Attributes",
      "values": [
        "KF1",
        "KF2",
      ],
    },
    "layerCodes": [
      "Layer_19",
    ],
    "masterImage": {
      "altText": "name",
      "mainSource": "http://localhost:8000",
      "thumbnail": "http://localhost:8000",
    },
    "name": "name",
    "path": "/s/name-1853176582",
    "promotionalContent": "Promotional content value",
    "scoringWeight": 100,
    "shortDescription": "Short description",
    "specification": {
      "allowedToDownload": true,
      "assetType": "SPECIFICATION",
      "fileSize": 10,
      "format": "pdf",
      "mime": "application/pdf",
      "name": "name",
      "realFileName": "real-file-name.pdf",
      "url": "http://localhost:8000",
    },
    "systemBenefits": [],
    "systemLayers": [
      {
        "layerNumber": "layerNo 1",
        "name": "layer name",
        "relatedOptionalProducts": [
          "400120_Monarplan_Outside_corner_anthracite",
        ],
        "relatedProducts": [
          "300190_Rubber_sheat",
        ],
        "shortDescription": "SDescription 1 NO",
        "type": "LAYER_ACCESSORIES",
      },
    ],
    "systemReferences": [
      "Test_PIM_System2",
    ],
    "uniqueSellingPropositions": [
      "USP 1",
      "USP 2",
    ],
    "videos": [
      {
        "label": "name",
        "previewMedia": null,
        "subtitle": null,
        "title": "",
        "videoRatio": null,
        "videoUrl": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
  },
]
`;

exports[`transformSystem transforms a fully populated system 1`] = `
[
  {
    "awardsAndCertificateDocuments": [
      {
        "allowedToDownload": true,
        "assetType": "AWARDS",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": false,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": undefined,
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 1.7976931348623157e+308,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": undefined,
      },
    ],
    "awardsAndCertificateImages": [
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
    ],
    "bim": {
      "name": "name",
      "url": "http://localhost:8000",
    },
    "brand": {
      "code": "code",
      "logo": "http://localhost:8000",
      "name": "name",
    },
    "categories": [
      {
        "categoryType": "Brand",
        "code": "code",
        "image": {
          "allowedToDownload": true,
          "fileSize": 10,
          "mime": "image/png",
          "name": "name",
          "realFileName": "real-file-name.png",
          "url": "http://localhost:8000",
        },
        "name": "name",
        "parentCategoryCode": "parent-category-code",
      },
    ],
    "classifications": [
      {
        "features": [
          {
            "name": "name",
            "value": "value symbol",
          },
        ],
        "name": "name",
      },
    ],
    "code": "code",
    "description": "<p>Some very long description</p>",
    "documents": [
      {
        "assetType": "ASSEMBLY_INSTRUCTIONS",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "SPECIFICATION",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "VIDEO",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "84587715",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
    "galleryImages": [
      {
        "altText": "name",
        "mainSource": "http://localhost:8000",
        "thumbnail": "http://localhost:8000",
      },
    ],
    "goodBetterBest": undefined,
    "guaranteesAndWarrantiesImages": [],
    "guaranteesAndWarrantiesLinks": [],
    "hashedCode": "1853176582",
    "keyFeatures": {
      "name": "System Attributes",
      "values": [
        "KF1",
        "KF2",
      ],
    },
    "layerCodes": [
      "Layer_19",
    ],
    "masterImage": {
      "altText": "name",
      "mainSource": "http://localhost:8000",
      "thumbnail": "http://localhost:8000",
    },
    "name": "name",
    "path": "/s/name-1853176582",
    "promotionalContent": "Promotional content value",
    "scoringWeight": 100,
    "shortDescription": "Short description",
    "specification": {
      "allowedToDownload": true,
      "assetType": "SPECIFICATION",
      "fileSize": 10,
      "format": "pdf",
      "mime": "application/pdf",
      "name": "name",
      "realFileName": "real-file-name.pdf",
      "url": "http://localhost:8000",
    },
    "systemBenefits": [],
    "systemLayers": [
      {
        "layerNumber": "layerNo 1",
        "name": "layer name",
        "relatedOptionalProducts": [
          "400120_Monarplan_Outside_corner_anthracite",
        ],
        "relatedProducts": [
          "300190_Rubber_sheat",
        ],
        "shortDescription": "SDescription 1 NO",
        "type": "LAYER_ACCESSORIES",
      },
    ],
    "systemReferences": [
      "Test_PIM_System2",
    ],
    "uniqueSellingPropositions": [
      "USP 1",
      "USP 2",
    ],
    "videos": [
      {
        "label": "name",
        "previewMedia": null,
        "subtitle": null,
        "title": "",
        "videoRatio": null,
        "videoUrl": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
  },
]
`;

exports[`transformSystem transforms a fully populated system with multiple layers 1`] = `
[
  {
    "awardsAndCertificateDocuments": [
      {
        "allowedToDownload": true,
        "assetType": "AWARDS",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": false,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": undefined,
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 1.7976931348623157e+308,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": "real-file-name.pdf",
        "url": undefined,
      },
    ],
    "awardsAndCertificateImages": [
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": 10,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
      {
        "allowedToDownload": true,
        "assetType": "CERTIFICATES",
        "fileSize": undefined,
        "format": "pdf",
        "mime": "application/pdf",
        "name": "name",
        "realFileName": undefined,
        "url": "http://localhost:8000",
      },
    ],
    "bim": {
      "name": "name",
      "url": "http://localhost:8000",
    },
    "brand": {
      "code": "code",
      "logo": "http://localhost:8000",
      "name": "name",
    },
    "categories": [
      {
        "categoryType": "Brand",
        "code": "code",
        "image": {
          "allowedToDownload": true,
          "fileSize": 10,
          "mime": "image/png",
          "name": "name",
          "realFileName": "real-file-name.png",
          "url": "http://localhost:8000",
        },
        "name": "name",
        "parentCategoryCode": "parent-category-code",
      },
    ],
    "classifications": [
      {
        "features": [
          {
            "name": "name",
            "value": "value symbol",
          },
        ],
        "name": "name",
      },
    ],
    "code": "code",
    "description": "<p>Some very long description</p>",
    "documents": [
      {
        "assetType": "ASSEMBLY_INSTRUCTIONS",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "SPECIFICATION",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "2583923841",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "http://localhost:8000",
      },
      {
        "assetType": "VIDEO",
        "extension": "pdf",
        "fileSize": 10,
        "format": "application/pdf",
        "id": "84587715",
        "isLinkDocument": false,
        "realFileName": "real-file-name.pdf",
        "title": "name",
        "url": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
    "galleryImages": [
      {
        "altText": "name",
        "mainSource": "http://localhost:8000",
        "thumbnail": "http://localhost:8000",
      },
    ],
    "goodBetterBest": undefined,
    "guaranteesAndWarrantiesImages": [],
    "guaranteesAndWarrantiesLinks": [],
    "hashedCode": "1853176582",
    "keyFeatures": {
      "name": "System Attributes",
      "values": [
        "KF1",
        "KF2",
      ],
    },
    "layerCodes": [
      "layer 1",
      "layer 2",
    ],
    "masterImage": {
      "altText": "name",
      "mainSource": "http://localhost:8000",
      "thumbnail": "http://localhost:8000",
    },
    "name": "name",
    "path": "/s/name-1853176582",
    "promotionalContent": "Promotional content value",
    "scoringWeight": 100,
    "shortDescription": "Short description",
    "specification": {
      "allowedToDownload": true,
      "assetType": "SPECIFICATION",
      "fileSize": 10,
      "format": "pdf",
      "mime": "application/pdf",
      "name": "name",
      "realFileName": "real-file-name.pdf",
      "url": "http://localhost:8000",
    },
    "systemBenefits": [],
    "systemLayers": [
      {
        "layerNumber": "layerNo 1",
        "name": "layer name",
        "relatedOptionalProducts": [
          "400120_Monarplan_Outside_corner_anthracite",
        ],
        "relatedProducts": [
          "300190_Rubber_sheat",
        ],
        "shortDescription": "SDescription 1 NO",
        "type": "LAYER_ACCESSORIES",
      },
      {
        "layerNumber": "layerNo 1",
        "name": "layer name",
        "relatedOptionalProducts": [
          "400120_Monarplan_Outside_corner_anthracite",
        ],
        "relatedProducts": [
          "300190_Rubber_sheat",
        ],
        "shortDescription": "SDescription 1 NO",
        "type": "LAYER_ACCESSORIES",
      },
    ],
    "systemReferences": [
      "Test_PIM_System2",
    ],
    "uniqueSellingPropositions": [
      "USP 1",
      "USP 2",
    ],
    "videos": [
      {
        "label": "name",
        "previewMedia": null,
        "subtitle": null,
        "title": "",
        "videoRatio": null,
        "videoUrl": "https://www.youtube.com/watch?v=3901c0ds7oo",
      },
    ],
  },
]
`;
